# nca-worker-management-app

./: .gitignore  Makefile  PR_SUBTEAM_WORKERS.md  README.md  justfile  package-lock.json  package.json
backend/: Makefile  pyproject.toml  railway.toml
backend/.git-hooks/: pre-commit
backend/app/: main.py
backend/app/core/: authentication.py  concurrency.py  config.py  dependencies.py  exceptions.py  logging.py  middleware.py  redaction.py  supabase.py
backend/app/repository/: filters.py  repository.py
backend/app/repository/availabilities/: queries.py  repository.py
backend/app/repository/confirmation_tokens/: repository.py
backend/app/repository/department_roles/: queries.py  repository.py
backend/app/repository/departments/: queries.py  repository.py
backend/app/repository/schedules/: queries.py  repository.py
backend/app/repository/subteams/: queries.py  repository.py
backend/app/repository/workers/: queries.py  repository.py
backend/app/router/: __init__.py
backend/app/router/account/: router.py
backend/app/router/authentication/: router.py
backend/app/router/availabilities/: router.py
backend/app/router/subteams/: router.py
backend/app/schemas/: models.py
backend/scripts/: install-hooks.sh
backend/tests/: conftest.py
backend/tests/integration/: test_exception_handlers.py  test_health.py
backend/tests/unit/: test_authentication.py  test_base_repository.py  test_concurrency.py  test_redaction.py  test_repository_filters.py  test_worker_repository_batch_roles.py  test_worker_repository_roles.py  test_worker_repository_search.py
(+136 files in other folders)
